name:                CarpHask
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eriksvedang/Carp
license:             Apache-2.0
license-file:        LICENSE
author:              Erik Svedäng
maintainer:          erik.svedang@gmail.com
copyright:           Erik Svedäng
category:            General
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Info,
                       Obj,
                       Project,
                       Parsing,
                       Infer,
                       Emit,
                       ColorText,
                       Constraints,
                       Deftype,
                       Sumtypes,
                       SumtypeCase,
                       Commands,
                       Template,
                       ToTemplate,
                       SymPath,
                       Types,
                       TypesToC,
                       Util,
                       Eval,
                       TypeError,
                       InitialTypes,
                       AssignTypes,
                       GenerateConstraints,
                       Polymorphism,
                       Concretize,
                       ArrayTemplates,
                       StaticArrayTemplates,
                       Expand,
                       Scoring,
                       Lookup,
                       Qualify,
                       Repl,
                       StartingEnv,
                       RenderDocs,
                       StructUtils,
                       Path,
                       Primitives,
                       Validate

  build-depends:       base >= 4.7 && < 5
                     , parsec == 3.1.*
                     , mtl
                     , containers
                     , process
                     , directory
                     , filepath
                     , split
                     , haskeline
                     , blaze-html
                     , blaze-markup
                     , text
                     , ansi-terminal >= 0.10.3
                     , cmark
                     , edit-distance

  default-language:    Haskell2010

executable carp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CarpHask
                     , containers
                     , directory
                     , filepath
                     , haskeline
                     , process
                     , optparse-applicative
  default-language:    Haskell2010

executable carp-header-parse
  hs-source-dirs:      headerparse
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CarpHask
                     , containers
                     , directory
                     , parsec
                     , optparse-applicative
  default-language:    Haskell2010

test-suite CarpHask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CarpHask
                     , HUnit
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carp-lang/Carp
